<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    tools:context="com.github.andrejnazarov.yandextranslator.MainActivity">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_compat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        tools:checked="true"/>

    <TextView
        android:id="@+id/lang_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switch_compat"
        android:layout_below="@+id/switch_compat"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        tools:text="en-ru"/>

    <EditText
        android:id="@+id/input_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/hint"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Base.Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_edit_text"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/translation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/translate_button"
        android:layout_below="@+id/progress_bar"
        android:padding="@dimen/padding_small"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
        tools:text="translated text here"/>

    <Button
        android:id="@+id/translate_button"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        tools:text="@string/translate"/>

</RelativeLayout>
